FIX: Small Screen Overflow X

--- a/conc/conc.css
+++ b/conc/conc.css
@@ -96,3 +96,19 @@ body{
 	
 	transition: transform 0.5s ease-out;
 }
+
+
+
+
+
+
+
+
+
+
+@media (max-width : 900px) {
+	html, body{
+		max-width:100vw;
+		overflow-x:hidden;
+	}
+}
