--- a/home.css
+++ b/home.css
@@ -248,3 +248,16 @@ html{
 .HomeContent p{
 	margin-right:20vw;
 }
+
+
+
+
+
+
+
+@media (max-width : 900px) {
+	html, body{
+		max-width:100vw;
+		overflow-x:hidden;
+	}
+}
