--- a/uni.css
+++ b/uni.css
@@ -37,7 +37,7 @@ a:active{
 
 
 header{
-	width:100%;
+	width:100%;max-width:100vw;
 	
 	top:0; left:0;
 	box-shadow: inset 0 0 20px black;
